2004-08-10 Tanya Wolff
	Fix for 70943 - externalized strings
	* plugin.xml
	* plugin.properties
	
2004-08-10 Mikhail Khodjaiants
	Fix for bug 70902. TVT3.0: Customize Perspective C++ Debug has duplicated strings.
	* plugin.xml
	
2004-08-05 Mikhail Khodjaiants
	Cosmetic fix.
	* CDebugUIMessages.properties

2004-08-04 Mikhail Khodjaiants
	New implementation of the variable types.
	* CDTDebugModelPresentation.java
	* CastToArrayActionDelegate.java
	* CastToTypeActionDelegate.java
	* DecVariableFormatActionDelegate.java
	* HexVariableFormatActionDelegate.java
	* NaturalVariableFormatActionDelegate.java
	* RestoreDefaultTypeActionDelegate.java
	* VariableFormatActionDelegate.java

2004-07-30 Mikhail Khodjaiants
	Display the error message in the variable's label if the value of variable can not be retrieved.
	* CDebugUIMessages.properties
	* CDTDebugModelPresentation.java

2004-07-23 Mikhail Khodjaiants
	More informative error messages.
	* CDebugUIMessages.properties
	* CDTDebugModelPresentation.java

2004-07-20 Mikhail Khodjaiants
	Cleanup.
	* ErrorStatusHandler.java
	* InfoStatusHandler.java
	* QuestionStatusHandler.java

2004-07-16 Mikhail Khodjaiants
	Cleanup.
	* CDTDebugModelPresentation.java

2004-07-15 Mikhail Khodjaiants
	Fix for bug 70147. TVT3.0: Preferences CDT Editor has non-externalized string.
	* plugin.properties
	* plugin.xml

2004-07-15 Tanya Wolff
	Fix for bug 69939. I18N: Memory view contains unexternalized strings.
	Externalized Memory View Refresh menu item.
	* RefreshMemoryAction.java
	* ActionMessages.properties
	
2004-07-09 Mikhail Khodjaiants
	Renamed "ICDebugElementErrorStatus" to "ICDebugElementStatus".
	* CDTDebugModelPresentation.java

2004-07-09 Mikhail Khodjaiants
	Fix for bug 69221: "Show full paths" doesn't work for shared libraries.
	* SharedLibrariesView.java

2004-06-29 Mikhail Khodjaiants
	Temporary fix for bug 68915: Invalid values in the Variables view.
	* CDebugUIPlugin.java

2004-06-22 Mikhail Khodjaiants